--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Mis Laboratorios
-description: Un sitio para mostrar mis laboratorios
+image: /img/logo2.png
+title: WriteUps || MarckWeb
+description: Un sitio para mostrar mis WriteUps
 # markdown: kramdown
 # theme: jekyll-theme-slate
