--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# image: /img/logo2.png
- title: Laboratorios de Hacking
+logo: img/logo2.png
+title: Laboratorios de Hacking
 description: Un sitio para mostrar mis WriteUps
 # markdown: kramdown
 # theme: jekyll-theme-slate
