--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 logo: img/logo2.png
-title: Laboratorios de Hacking
+title: <- Ir al Home 
 description: Un sitio para mostrar mis WriteUps
 # markdown: kramdown
 # theme: jekyll-theme-slate
